DT-1897: 🔧 Fix tests after upgrade of spring boot and java